<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="liuyang.drawable_notepad.NoteActivity">

    <item
        android:id="@+id/action_toggle_keyboard"
        android:icon="@drawable/ic_keyboard_24px"
        android:title="@string/action_toggle_keyboard"
        android:onClick="toggleKeyboard"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_text_format"
        android:icon="@drawable/ic_text_format_24px"
        android:title="@string/action_text_format"
        android:onClick="toggleTextFormatMenu"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_draw"
        android:icon="@drawable/ic_draw_24dp"
        android:title="@string/action_draw"
        android:onClick="toggleDrawMenu"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete_note"
        android:title="@string/action_delete_note"
        android:onClick="deletnote"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/share_note"
        android:onClick="shareNote"
        app:showAsAction="never"/>

</menu>
