<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_24px"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/action_delete_all_notes"
        android:icon="@drawable/ic_delete_24px"
        android:title="@string/action_delete_all"
        android:onClick="showAlertDialogDeleteAllNotes"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:onClick="showHelp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:onClick="showAbout"
        app:showAsAction="never"/>
</menu>
